# trust

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
assets/native-host-manifests/: chrome_native_host_manifest.macos.template.json
bins/c2pa-inspect/: Cargo.toml
bins/c2pa-inspect/src/: main.rs
bins/c2pa-native-host/: Cargo.toml
bins/c2pa-native-host/src/: main.rs
bins/fake-upstream/: Cargo.toml
bins/fake-upstream/src/: main.rs
bins/mcp-gateway/: Cargo.toml
bins/mcp-gateway/src/: main.rs
bins/toolfw/: Cargo.toml
bins/toolfw/src/: main.rs
bins/trust-console/: Cargo.toml
bins/trust-console/src/: main.rs
bins/trust-smoke/: Cargo.toml
bins/trust-smoke/src/: main.rs
bins/trust-up/: Cargo.toml
bins/trust-up/src/: main.rs
configs/examples/: gateway.mounts.yaml  gateway.views.yaml  toolfw.policy.yaml
crates/agent-profiles/: Cargo.toml
crates/agent-profiles/src/: lib.rs
crates/audit-log/: Cargo.toml
crates/audit-log/src/: lib.rs
crates/auth-keyring/: Cargo.toml
crates/auth-keyring/src/: lib.rs
crates/c2pa-inspector-core/: Cargo.toml
crates/c2pa-inspector-core/src/: lib.rs
crates/cap-token/: Cargo.toml
crates/cap-token/src/: lib.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: lib.rs
crates/mcp-wire/: Cargo.toml
crates/mcp-wire/src/: lib.rs
crates/native-messaging/: Cargo.toml
crates/native-messaging/src/: lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/redaction/: Cargo.toml
crates/redaction/src/: lib.rs
crates/toolfw-core/: Cargo.toml
crates/toolfw-core/src/: lib.rs
docs/: AGENTS.md  EXTENSION.md  FIRST_RUN.md  OPERATIONS.md  RELEASING.md  SMOKE_TESTS.md
extensions/c2pa-inspect/: background.js  manifest.json  media_detect.js  options.css  options.html  options.js  result.html  result.js  styles.css
scripts/: check.ps1  check.sh  install_native_host.ps1  install_native_host.sh  install_native_host_auto.ps1  install_native_host_auto.sh
src/: lib.rs
tests/: audit_auth_attribution.rs  audit_checkpoint.rs  audit_keyring_attribution.rs  audit_log.rs  audit_signed_checkpoint.rs  c2pa_cli.rs  c2pa_gateway_tool.rs  c2pa_native_host.rs  c2pa_test_support.rs  doctor.rs  gateway_auth.rs  gateway_keyring.rs  git_tools.rs  native_host_manifest_templates.rs  policy_explain.rs  policy_lint_cli.rs  policy_trace_audit.rs  policy_trace_cli.rs  policy_trace_proxy.rs  redaction_audit_sampling.rs  schema_validation.rs  sqlite_query.rs  stdio_batch.rs  stdio_proxy.rs  toolfw_client_policy.rs  toolfw_firewall.rs  toolfw_keyring_policy.rs  toolfw_rate_limit.rs  trust_smoke_cli.rs  trust_up_plan.rs  trust_up_policy.rs
