[package]
name = "trust-stack"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[workspace]
members = [
  "crates/*",
  "bins/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.18"
globset = "0.4"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
audit-log = { path = "crates/audit-log" }
