[package]
name = "trust-stack"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[workspace]
members = [
  "crates/*",
  "bins/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
c2pa = { version = "0.55", default-features = false, features = ["file_io", "rust_native_crypto"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonschema = "0.18"
globset = "0.4"
hex = "0.4"
hmac = "0.12"
regex = "1"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlparser = "0.51"
thiserror = "2"
tempfile = "3"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
audit-log = { path = "crates/audit-log" }
rusqlite.workspace = true
c2pa.workspace = true
rcgen = "0.13"
base64.workspace = true
