[package]
name = "trust-smoke"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
audit-log = { path = "../../crates/audit-log" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
