[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
auth-keyring = { path = "../auth-keyring" }
audit-log = { path = "../audit-log" }
base64.workspace = true
cap-token = { path = "../cap-token" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlparser.workspace = true
c2pa-inspector-core = { path = "../c2pa-inspector-core" }
mcp-wire = { path = "../mcp-wire" }

[dev-dependencies]
tempfile.workspace = true
