[package]
name = "toolfw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hmac.workspace = true
mcp-wire = { path = "../mcp-wire" }
policy-engine = { path = "../policy-engine" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
