[package]
name = "toolfw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
auth-keyring = { path = "../auth-keyring" }
audit-log = { path = "../audit-log" }
base64.workspace = true
cap-token = { path = "../cap-token" }
hmac.workspace = true
jsonschema.workspace = true
mcp-wire = { path = "../mcp-wire" }
policy-engine = { path = "../policy-engine" }
rand.workspace = true
redaction = { path = "../redaction" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
